--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -57,6 +57,10 @@ jobs:
           yarn global add serverless@3
           yarn install
       - name: Pull latest image
+        env:
+          ECR_REPOSITORY: group-lt
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker pull public.ecr.aws/lambda/provided:al2
